objects/Price_Requests__c.object
<CustomObject>
    <fields>
        <fullName>Disty_Temp__c</fullName>
        <formula>IF(TEXT(ww_acct_name__c)=&quot;Arrow Electronics Inc&quot;, &quot;Arrow Electronics Inc&quot;, 
IF(TEXT(ww_acct_name__c)=&quot;Avnet Inc&quot;, &quot;Avnet Inc&quot;,
IF(TEXT(ww_acct_name__c)=&quot;TTI Inc&quot;, &quot;TTI Inc&quot;,
IF(TEXT(ww_acct_name__c)=&quot;DAC Group&quot;, &quot;DAC Group&quot;,
IF(TEXT(ww_acct_name__c)=&quot;Digi-Key Corp.&quot;, &quot;Digi-Key Corp.&quot;,
IF(TEXT(ww_acct_name__c)=&quot;Electrocomponents PLC&quot;, &quot;Electrocomponents PLC&quot;,
IF(TEXT(ww_acct_name__c)=&quot;Element14&quot;, &quot;Element14&quot;,
IF(TEXT(ww_acct_name__c)=&quot;Future Electronics&quot;, &quot;Future Electronics&quot;,
IF(TEXT(ww_acct_name__c)=&quot;Sager Electronics&quot;, &quot;Sager Electronics&quot;,&quot;Other&quot;)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disty_Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Price Requests</relationshipLabel>
        <relationshipName>Price_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Approved_Value__c</fullName>
        <label>Total Approved Value</label>
        <summarizedField>Price_Request_Parts__c.approved_amt__c</summarizedField>
        <summaryForeignKey>Price_Request_Parts__c.Price_Requests__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>agrmt_nbr__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Agreement Number</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>branch_id__c</fullName>
        <label>Distributor Branch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calendar_month__c</fullName>
        <label>Cal Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calendar_quarter__c</fullName>
        <label>Cal Qtr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>calendar_year__c</fullName>
        <label>Cal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cust_contact_email__c</fullName>
        <label>POS Customer Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cust_contact_name__c</fullName>
        <label>POS Customer Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cust_contact_phone__c</fullName>
        <label>POS Customer Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributor_region_desc__c</fullName>
        <label>Distributor Account Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effective_date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>entering_branch_market_name__c</fullName>
        <label>Market (Entering Branch)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_acct_name__c</fullName>
        <label>POS Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_acct_nbr__c</fullName>
        <label>POS Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_city_name__c</fullName>
        <label>POS City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_cust_country__c</fullName>
        <label>POS Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_industry_code__c</fullName>
        <label>POS Industry Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_postal_code_2__c</fullName>
        <label>POS Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_sales_terr__c</fullName>
        <label>POS Sales Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_sename__c</fullName>
        <label>POS Sales Engineer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pos_st_name_abbrn__c</fullName>
        <label>POS State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>primary_indicator__c</fullName>
        <label>Primary Distributor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>requesting_acct_name__c</fullName>
        <label>Distributor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesting_city_name__c</fullName>
        <label>Distributor City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesting_iso_ctry_cde__c</fullName>
        <label>Distributor Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesting_org_acct_nbr__c</fullName>
        <label>Distributor Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesting_postal_code_2__c</fullName>
        <label>Distributor Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requesting_st_name_abbrn__c</fullName>
        <label>Distributor State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sales_terr__c</fullName>
        <label>Sales Territory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sename__c</fullName>
        <label>Sales Engineer / Branch Advocate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_dscrptn__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Not Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>term__c</fullName>
        <label>Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type_code__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCR</fullName>
                </value>
                <value>
                    <fullName>LDR</fullName>
                </value>
                <value>
                    <fullName>MCP</fullName>
                </value>
                <value>
                    <fullName>NDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ww_acct_name__c</fullName>
        <label>Distributor Worldwide Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AE Petsche Company</fullName>
                </value>
                <value>
                    <fullName>Aesco Electronics Inc</fullName>
                </value>
                <value>
                    <fullName>Arrow Electronics Inc</fullName>
                </value>
                <value>
                    <fullName>Avnet Inc</fullName>
                </value>
                <value>
                    <fullName>BJG ELECTRONICS INC</fullName>
                </value>
                <value>
                    <fullName>BK CONTROLS INC.</fullName>
                </value>
                <value>
                    <fullName>Cabyter S.A. De CV</fullName>
                </value>
                <value>
                    <fullName>Chief Enterprises</fullName>
                </value>
                <value>
                    <fullName>COAST AIR INC.</fullName>
                </value>
                <value>
                    <fullName>Components Center</fullName>
                </value>
                <value>
                    <fullName>CONECTER, S.A. DE C.V.</fullName>
                </value>
                <value>
                    <fullName>CUMBERLAND ELECTRONIC INC</fullName>
                </value>
                <value>
                    <fullName>DAC Group</fullName>
                </value>
                <value>
                    <fullName>DEE ELECTRONICS INC</fullName>
                </value>
                <value>
                    <fullName>Digi-Key Corp.</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUIDORA ANAYA</fullName>
                </value>
                <value>
                    <fullName>Electro Insulation Corp</fullName>
                </value>
                <value>
                    <fullName>ELECTRO SONIC  INC</fullName>
                </value>
                <value>
                    <fullName>Electro Sonic Inc</fullName>
                </value>
                <value>
                    <fullName>Electrocomponents PLC</fullName>
                </value>
                <value>
                    <fullName>Electronic Industries Inc</fullName>
                </value>
                <value>
                    <fullName>Element14</fullName>
                </value>
                <value>
                    <fullName>FLAME ENTERPRISES, INC.</fullName>
                </value>
                <value>
                    <fullName>Fogel De Centroamerica SA</fullName>
                </value>
                <value>
                    <fullName>Future Electronics</fullName>
                </value>
                <value>
                    <fullName>GEMCAP INC.</fullName>
                </value>
                <value>
                    <fullName>Genuine Parts Company</fullName>
                </value>
                <value>
                    <fullName>GO ELECTRONICS</fullName>
                </value>
                <value>
                    <fullName>Gopher Electronics</fullName>
                </value>
                <value>
                    <fullName>Hammond Electronics Inc.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ww_acct_number__c</fullName>
        <label>Distributor Worldwide Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Price Requests</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>ww_acct_name__c</columns>
        <columns>pos_acct_name__c</columns>
        <columns>effective_date__c</columns>
        <columns>status_dscrptn__c</columns>
        <columns>Total_Approved_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NDRs</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>ww_acct_name__c</columns>
        <columns>pos_acct_name__c</columns>
        <columns>effective_date__c</columns>
        <columns>status_dscrptn__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type_code__c</field>
            <operation>equals</operation>
            <value>NDR</value>
        </filters>
        <label>NDR&apos;s</label>
    </listViews>
    <nameField>
        <label>Price Request Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Requests</pluralLabel>
    <recordTypes>
        <fullName>Channel_PR</fullName>
        <active>true</active>
        <label>Channel PR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>